--- a/chesnokShow/category.html
+++ b/chesnokShow/category.html
@@ -3658,12 +3658,12 @@
 <script>
     $(function () {
         $('#dl-menu').dlmenu({
-            animationClasses: {classin: 'dl-animate-in-2', classout: 'dl-animate-out-2'}
+            animationClasses: {classin: 'dl-animate-in-3', classout: 'dl-animate-out-3'}
         });
 
         $('._royalSlider').royalSlider({
             fullscreen: {
-                enabled: false,
+                enabled: true,
                 nativeFS: true
             },
             controlNavigation: 'thumbnails',
