Added not found search.

--- a/chesnok/markup/modules/header/header.html
+++ b/chesnok/markup/modules/header/header.html
@@ -753,6 +753,8 @@
                                 </span>
                         </div>
                     </form>
+
+                    <!--START header-search-->
                     <div class="headerSearchResult">
                         <a class="searchResult" href="">
                             <div class="wrapSearchResultImage">
@@ -805,6 +807,16 @@
                             </a>
                         </div>
                     </div>
+                    <!--END header-search-->
+
+                    <!--START header-search-notFound-->
+                    <div class="headerSearchResult">
+                        <div class="notFoundSearch">
+                            <p class="textNotFoundSearch">По вашему запросу  ничего не найдено</p>
+                            <p class="textNotFoundSearch">Попробуйте изменить параметры поиска </p>
+                        </div>
+                    </div>
+                    <!--END header-search-notFound-->
                 </div>
             </div>
         </div>
