--- a/chesnok/markup/pages/index.html
+++ b/chesnok/markup/pages/index.html
@@ -68,14 +68,15 @@
 
     <!-- Main scripts. You can replace it, but I recommend you to leave it here-->
 
-    <!--<script src="%=staticPrefix=%js/separate-js/jquery-2.1.4.min.js" type="text/javascript"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="%=staticPrefix=%js/separate-js/royalSlider.js" type="text/javascript"></script>
 
     <script>
         $(function () {
             $('#dl-menu').dlmenu({
-                animationClasses: {classin: 'dl-animate-in-3', classout: 'dl-animate-out-3'}
+                animationClasses: {classin: 'dl-animate-in-2', classout: 'dl-animate-out-2'}
             });
 
             $('._royalSlider').royalSlider({
