--- a/chesnok/markup/pages/profile.html
+++ b/chesnok/markup/pages/profile.html
@@ -14,72 +14,73 @@
 
 <body class="page">
 
-<!-- START header -->
-{{> header/header}}
-<!-- END header -->
+    <!-- START header -->
+    {{> header/header}}
+    <!-- END header -->
 
-<section class="wrapper">
+    <section class="wrapper">
 
-    <!-- START bread crumbs -->
-    {{> breadCrumbs/breadCrumbs}}
-    <!-- END bread crumbs -->
+        <!-- START bread crumbs -->
+        {{> breadCrumbs/breadCrumbs}}
+        <!-- END bread crumbs -->
 
-    <!-- START profile content -->
-    {{> profile/profileContent}}
-    <!-- END profile content -->
+        <!-- START profile content -->
+        {{> profile/profileContent}}
+        <!-- END profile content -->
 
-    <!--START scroll top-->
-    {{> scrollTopBottom/scrollTopBottom}}
-    <!--END scroll bottom-->
+        <!--START scroll top-->
+        {{> scrollTopBottom/scrollTopBottom}}
+        <!--END scroll bottom-->
 
-</section>
+    </section>
 
-<!-- START footer -->
-{{> footer/footer}}
-<!-- END footer -->
+    <!-- START footer -->
+    {{> footer/footer}}
+    <!-- END footer -->
 
-<!-- Main scripts. You can replace it, but I recommend you to leave it here-->
+    <!-- Main scripts. You can replace it, but I recommend you to leave it here-->
 
-<!--<script src="%=staticPrefix=%js/separate-js/jquery-2.1.4.min.js" type="text/javascript"></script>-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="%=staticPrefix=%js/separate-js/royalSlider.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    <script src="%=staticPrefix=%js/separate-js/royalSlider.js" type="text/javascript"></script>
 
-<script>
-    $(function () {
-        $('#dl-menu').dlmenu({
-            animationClasses: {classin: 'dl-animate-in-3', classout: 'dl-animate-out-3'}
+    <script>
+        $(function () {
+            $('#dl-menu').dlmenu({
+                animationClasses: {classin: 'dl-animate-in-2', classout: 'dl-animate-out-2'}
+            });
+
+            $('._royalSlider').royalSlider({
+                fullscreen: {
+                    enabled: true,
+                    nativeFS: true
+                },
+                controlNavigation: 'thumbnails',
+                autoScaleSlider: true,
+                autoScaleSliderWidth: 500,
+                autoScaleSliderHeight: 700,
+                loop: false,
+                imageScaleMode: 'fit-if-smaller',
+                navigateByClick: true,
+                numImagesToPreload: 6,
+                arrowsNav: false,
+                arrowsNavAutoHide: true,
+                arrowsNavHideOnTouch: true,
+                keyboardNavEnabled: true,
+                fadeinLoadedSlide: true,
+                globalCaption: true,
+                globalCaptionInside: false,
+                thumbs: {
+                    appendSpan: true,
+                    firstMargin: true,
+                    paddingBottom: 4
+                }
+            });
         });
+    </script>
 
-        $('._royalSlider').royalSlider({
-            fullscreen: {
-                enabled: true,
-                nativeFS: true
-            },
-            controlNavigation: 'thumbnails',
-            autoScaleSlider: true,
-            autoScaleSliderWidth: 500,
-            autoScaleSliderHeight: 700,
-            loop: false,
-            imageScaleMode: 'fit-if-smaller',
-            navigateByClick: true,
-            numImagesToPreload: 6,
-            arrowsNav: false,
-            arrowsNavAutoHide: true,
-            arrowsNavHideOnTouch: true,
-            keyboardNavEnabled: true,
-            fadeinLoadedSlide: true,
-            globalCaption: true,
-            globalCaptionInside: false,
-            thumbs: {
-                appendSpan: true,
-                firstMargin: true,
-                paddingBottom: 4
-            }
-        });
-    });
-</script>
-
-<script src="%=staticPrefix=%js/main%=hash=%%=min=%.js"></script>
+    <script src="%=staticPrefix=%js/main%=hash=%%=min=%.js"></script>
 </body>
 
 </html>
