--- a/perehid/dev/html/pages/index.html
+++ b/perehid/dev/html/pages/index.html
@@ -9,6 +9,10 @@
 //=../partials/header.html
 <!-- END header -->
 
+<!-- START header-bottom -->
+//=../partials/header-bottom.html
+<!-- END header-bottom -->
+
 <section class="content-main">
     <div class="container">
         <div class="row">
