--- a/perehid/dev/html/pages/index.html
+++ b/perehid/dev/html/pages/index.html
@@ -32,28 +32,9 @@
 <!-- END footer -->
 
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="../js/lib/bootstrap/bootstrap.min.js"></script>
-<script src="../js/lib/select2/select2.min.js"></script>
-<script src="../js/lib/datepicker/datepicker.js"></script>
-<script src="../js/main.js"></script>
 
-<script>
-    $('#sandbox-container .input-daterange').datepicker({
-        language: "uk",
-        format: "dd/mm/yy",
-    });
+<!-- START footer -->
+//=../partials/scripts.html
+<!-- END footer -->
 
-    $('#header-date .header-date-input').datepicker({
-        language: "uk",
-        format: "dd/mm/yy",
-    });
-
-    $('._select').select2();
-
-    $('._select2').select2({
-        minimumResultsForSearch: Infinity
-    });
-
-</script>
 </html>
