--- a/perehid/app/html/product-card.html
+++ b/perehid/app/html/product-card.html
@@ -698,6 +698,35 @@
         }
     });
 
+    $(document).ready(function () {
+
+        var date = new Date();
+        var d = date.getDate();
+        var m = date.getMonth();
+        var y = date.getFullYear();
+
+        $('#calendar').fullCalendar({
+            height: "auto",
+            header: {
+                left: 'title',
+                right: 'prev,next'
+            },
+
+            // For DEMO only
+            // *************
+            events: [
+                {
+                    title: 'All Day Event',
+                    start: new Date(y, m, 1)
+                },
+                {
+                    title: 'Long Event',
+                    start: new Date(y, m, d - 5)
+                },
+            ]
+        });
+    });
+
 </script>
 <!-- END footer -->
 
