--- a/perehid/dev/html/pages/product-card.html
+++ b/perehid/dev/html/pages/product-card.html
@@ -29,8 +29,8 @@
 
 </body>
 
-<!-- START footer -->
+<!-- START scripts -->
 //=../partials/scripts.html
-<!-- END footer -->
+<!-- END scripts -->
 
 </html>
