--- a/perehid/dev/html/pages/index.html
+++ b/perehid/dev/html/pages/index.html
@@ -33,8 +33,8 @@
 
 </body>
 
-<!-- START footer -->
+<!-- START scripts -->
 //=../partials/scripts.html
-<!-- END footer -->
+<!-- END scripts -->
 
 </html>
