--- a/perehid/dev/html/pages/profile.html
+++ b/perehid/dev/html/pages/profile.html
@@ -34,8 +34,8 @@
 
 </body>
 
-<!-- START footer -->
+<!-- START scripts -->
 //=../partials/scripts.html
-<!-- END footer -->
+<!-- END scripts -->
 
 </html>
