--- a/elitPostel/html/thanks.html
+++ b/elitPostel/html/thanks.html
@@ -604,6 +604,7 @@
             </div>
             <!-- END header__search -->
         </div>
+
     </header>
     <!-- END header -->
 
@@ -956,6 +957,30 @@
         pause: true,
         interval: false
     });
+
+
+    $(document).on('ready', function () {
+        $('.slider-for').slick({
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            fade: true,
+            asNavFor: '.slider-nav',
+            arrow: false
+        });
+        $('.slider-nav').slick({
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            asNavFor: '.slider-for',
+            focusOnSelect: true,
+            arrows: true
+        });
+    });
+
+    $('.modal').on('shown.bs.modal', function () {
+        $('.slider-for').slick("setPosition", 0);
+        $('.slider-nav').slick("setPosition", 0);
+    })
+
 
 </script>
 <!-- END scripts -->
