Added catalog page. Some fixes.

--- a/elitPostel/html/product-card.html
+++ b/elitPostel/html/product-card.html
@@ -1073,7 +1073,7 @@
 
 <!-- START modal -->
 <div class="modal fade modal--view" id="view" tabindex="-1" role="dialog" aria-labelledby="view">
-    <div class="modal-dialog modal-lg modal-dialog--view" role="document">
+    <div class="modal-dialog modal-md modal-dialog--view" role="document">
         <div class="modal__content">
             <div class="modal__header">
                 <div class="modal__header-content">
@@ -1140,6 +1140,8 @@
 
 <!-- START scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 <script src="../js/main.js"></script>
 <script>
 
@@ -1192,8 +1194,7 @@
     $('.modal').on('shown.bs.modal', function () {
         $('.slider-for').slick("setPosition", 0);
         $('.slider-nav').slick("setPosition", 0);
-    })
-
+    });
 
 </script>
 <!-- END scripts -->
