--- a/elitPostel/html/cabinet.html
+++ b/elitPostel/html/cabinet.html
@@ -995,6 +995,8 @@
 
 <!-- START scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 <script src="../js/main.js"></script>
 <script>
 
@@ -1047,8 +1049,7 @@
     $('.modal').on('shown.bs.modal', function () {
         $('.slider-for').slick("setPosition", 0);
         $('.slider-nav').slick("setPosition", 0);
-    })
-
+    });
 
 </script>
 <!-- END scripts -->
