Added icons for mobile menu. Fixed hover on catalog product.

--- a/elitPostel/html/catalog.html
+++ b/elitPostel/html/catalog.html
@@ -1549,24 +1549,45 @@
 <div id="nav-mobile" class="nav-mobile">
     <ul class="nav-mobile__list">
         <li class="nav-mobile__list-item">
+            <svg class="icon icon-truck">
+                <use xlink:href="../img/svg-icons/svg-icons.svg#truck"></use>
+            </svg>
             <a href="#" class="nav-mobile__list-link">Доставка</a>
         </li>
         <li class="nav-mobile__list-item">
+            <svg class="icon icon-coin-dollar">
+                <use xlink:href="../img/svg-icons/svg-icons.svg#coin-dollar"></use>
+            </svg>
             <a href="#" class="nav-mobile__list-link">Оплата</a>
         </li>
         <li class="nav-mobile__list-item">
+            <svg class="icon icon-file-text">
+                <use xlink:href="../img/svg-icons/svg-icons.svg#file-text"></use>
+            </svg>
             <a href="#" class="nav-mobile__list-link">О магазине</a>
         </li>
         <li class="nav-mobile__list-item">
+            <svg class="icon icon-stack">
+                <use xlink:href="../img/svg-icons/svg-icons.svg#stack"></use>
+            </svg>
             <a href="#" class="nav-mobile__list-link">Бренды</a>
         </li>
         <li class="nav-mobile__list-item">
+            <svg class="icon icon-phone-mobile">
+                <use xlink:href="../img/svg-icons/svg-icons.svg#phone-mobile"></use>
+            </svg>
             <a href="#" class="nav-mobile__list-link">Контакты</a>
         </li>
         <li class="nav-mobile__list-item">
+            <svg class="icon icon-users">
+                <use xlink:href="../img/svg-icons/svg-icons.svg#users"></use>
+            </svg>
             <a href="#" class="nav-mobile__list-link">Обратная связь</a>
         </li>
         <li class="nav-mobile__list-item">
+            <svg class="icon icon-bubbles">
+                <use xlink:href="../img/svg-icons/svg-icons.svg#bubbles"></use>
+            </svg>
             <a href="#" class="nav-mobile__list-link">Отзывы</a>
         </li>
     </ul>
