--- a/elitPostel/html/catalog.html
+++ b/elitPostel/html/catalog.html
@@ -1735,7 +1735,7 @@
 <!-- END modal -->
 
 <!-- START modal -->
-<div class="modal fade modal--fast-view" id="fast-view" tabindex="-1" role="dialog" aria-labelledby="fast-view">
+<div class="modal fade modal--fast-view" id="fast-view" tabindex="-1" role="dialog" aria-labelledby="fast-view" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg modal-dialog--view" role="document">
         <div class="modal__content">
             <div class="modal__header">
@@ -1755,41 +1755,6 @@
 
                 <div class="row">
                     <div class="col col--6-of-12 col--xs-4-of-4 col--sm-4-of-4">
-                        <!--<div class="product-card__slider">-->
-                            <!--<div class="slider__view" data-toggle="modal" data-target="#view">-->
-                                <!--<section class="slider-for">-->
-                                    <!--<div>-->
-                                        <!--<img src="../img/img-delete-after-integration/slider-1.jpg">-->
-                                    <!--</div>-->
-                                    <!--<div>-->
-                                        <!--<img src="../img/img-delete-after-integration/slider-1.jpg">-->
-                                    <!--</div>-->
-                                    <!--<div>-->
-                                        <!--<img src="../img/img-delete-after-integration/slider-1.jpg">-->
-                                    <!--</div>-->
-                                    <!--<div>-->
-                                        <!--<img src="../img/img-delete-after-integration/slider-1.jpg">-->
-                                    <!--</div>-->
-                                <!--</section>-->
-                            <!--</div>-->
-                            <!--<div class="slider__thumbnails">-->
-                                <!--<div class="slider-nav">-->
-                                    <!--<div>-->
-                                        <!--<img src="../img/img-delete-after-integration/slider-thumb-1.jpg">-->
-                                    <!--</div>-->
-                                    <!--<div>-->
-                                        <!--<img src="../img/img-delete-after-integration/slider-thumb-2.jpg">-->
-                                    <!--</div>-->
-                                    <!--<div>-->
-                                        <!--<img src="../img/img-delete-after-integration/slider-thumb-3.jpg">-->
-                                    <!--</div>-->
-                                    <!--<div>-->
-                                        <!--<img src="../img/img-delete-after-integration/slider-thumb-2.jpg">-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-
                         <div class="royalSlider rsDefault _royalSlider">
                             <a class="rsImg bugaga"
                                data-rsbigimg="../img/img-delete-after-integration/slider-1.jpg"
@@ -1926,10 +1891,8 @@
     // Carousel
     // --------------------------
     $('.carousel').carousel({
-//        interval: 7000,
-//        pause: 'hover',
-        pause: true,
-        interval: false
+        interval: 7000,
+        pause: 'hover',
     });
 
     // Slick slider
@@ -1954,7 +1917,7 @@
 
     // Slick slider in modal
     // --------------------------
-    $('.modal').on('shown.bs.modal', function () {
+    $('.modal--view').on('shown.bs.modal', function () {
         $('.slider-for').slick('setPosition', 0);
         $('.slider-nav').slick('setPosition', 0);
     });
@@ -1965,7 +1928,7 @@
         $('._royalSlider').royalSlider({
             fullscreen: {
                 enabled: true,
-                nativeFS: true
+                nativeFS: false
             },
             controlNavigation: 'thumbnails',
             autoScaleSlider: true,
@@ -1978,7 +1941,7 @@
             arrowsNav: false,
             arrowsNavAutoHide: true,
             arrowsNavHideOnTouch: true,
-            keyboardNavEnabled: true,
+            keyboardNavEnabled: false,
             fadeinLoadedSlide: true,
             globalCaption: true,
             globalCaptionInside: false,
@@ -1992,18 +1955,8 @@
 
     // Royal slider in modal
     // --------------------------
-    $('.modal').on('shown.bs.modal', function () {
+    $('.modal--fast-view').on('shown.bs.modal', function () {
         $('.royalSlider').royalSlider('updateSliderSize', true);
-
-        (function () {
-            var fullScreenBtn = document.querySelector('.rsFullscreenBtn')
-
-            if (fullScreenBtn) {
-                fullScreenBtn.addEventListener('click', function () {
-                    fullScreenBtn.closest('.modal').classList.toggle('full-screen');
-                });
-            }
-        })();
     });
 
 </script>
