Added some modification for fast view.

--- a/elitPostel/html/catalog.html
+++ b/elitPostel/html/catalog.html
@@ -1735,7 +1735,7 @@
 <!-- END modal -->
 
 <!-- START modal -->
-<div class="modal fade modal--fast-view" id="fast-view" tabindex="-1" role="dialog" aria-labelledby="fast-view" data-backdrop="static" data-keyboard="false">
+<div class="modal fade modal--fast-view" id="fast-view" tabindex="-1" role="dialog" aria-labelledby="fast-view">
     <div class="modal-dialog modal-lg modal-dialog--view" role="document">
         <div class="modal__content">
             <div class="modal__header">
