Added some modification.

--- a/elitPostel/html/error.html
+++ b/elitPostel/html/error.html
@@ -616,7 +616,7 @@
 
     <!-- START content -->
     <main class="content">
-        <!-- START 404 -->
+        <!-- START error -->
         <div class="error-page-wrap">
             <div class="container">
                 <div class="error-page">
@@ -633,7 +633,7 @@
                 </div>
             </div>
         </div>
-        <!-- END 404 -->
+        <!-- END error -->
     </main>
     <!-- END content -->
 
@@ -880,7 +880,6 @@
             arrows: true
         });
     });
-
 
     // Slick slider in modal
     // --------------------------
