Added new examples.

--- a/flexboxPresentation/html/example-2.html
+++ b/flexboxPresentation/html/example-2.html
@@ -130,11 +130,7 @@
         </li>
 
         <li class="nav__item">
-            <a href="example-1.html" class="nav__link">Flex layout</a>
-        </li>
-
-        <li class="nav__item">
-            <a href="example-2.html" class="nav__link">Flex navigation</a>
+            <a href="example-6.html" class="nav__link">Direction of the main axis</a>
         </li>
 
         <li class="nav__item">
@@ -142,11 +138,31 @@
         </li>
 
         <li class="nav__item">
+            <a href="example-5.html" class="nav__link">Flex z-index</a>
+        </li>
+
+        <li class="nav__item">
+            <a href="example-7.html" class="nav__link">Align-content & align-items</a>
+        </li>
+
+        <li class="nav__item">
+            <a href="example-1.html" class="nav__link">Flex simple layout</a>
+        </li>
+
+        <li class="nav__item">
+            <a href="example-8.html" class="nav__link">Blocks of the same height</a>
+        </li>
+
+        <li class="nav__item">
+            <a href="example-2.html" class="nav__link">Flex navigation</a>
+        </li>
+
+        <li class="nav__item">
             <a href="example-3.html" class="nav__link">Flex blocks</a>
         </li>
 
         <li class="nav__item">
-            <a href="example-5.html" class="nav__link">Flex z-index</a>
+            <a href="example-9.html" class="nav__link">Inputs with dinamic width</a>
         </li>
 
         <li class="nav__item">
@@ -171,7 +187,7 @@
     var slideout = new Slideout({
         'panel': document.getElementById('page-wrap'),
         'menu': document.getElementById('nav'),
-        'padding': 256,
+        'padding': 350,
         'tolerance': 70
     });
 
