Added some modifications.

--- a/flexboxPresentation/html/links.html
+++ b/flexboxPresentation/html/links.html
@@ -33,7 +33,7 @@
             <ul class="tutorial">
                 <li class="tutorial__item">
                     <a href="https://www.youtube.com/watch?v=x0fcNDaE7Z0" class="tutorial_link">Вадим Макеев "Flexbox, теперь
-                        понятно"</a>
+                        понятно"</a> (<a href="https://pepelsbey.net/pres/flexbox-gotcha/#cover">Presentation slides</a>)
                 </li>
             </ul>
         
