Fixed code style. Changed some info.

--- a/flexboxPresentation/html/example-8.html
+++ b/flexboxPresentation/html/example-8.html
@@ -33,7 +33,7 @@
             <div class="code">
             <pre class="line-numbers">
             <code class="language-markup">
-            <div class="blocks">
+            &lt;div class="blocks"&gt;
               &lt;!-- START block --&gt;
               &lt;div class="block"&gt;
                 &lt;h3 class="title"&gt;Title-1&lt;/h3&gt;
@@ -47,7 +47,7 @@
               ........
         
               &lt;!-- END block --&gt;
-            </div>
+            &lt;/div&gt;
             </code>
             </pre>
             </div>
