--- a/flexboxPresentation/html/links.html
+++ b/flexboxPresentation/html/links.html
@@ -49,6 +49,9 @@
                 <li class="tutorial__item">
                     <a href="http://flexboxfroggy.com/" class="tutorial_link">Flexbox Froggy</a>
                 </li>
+                <li class="tutorial__item">
+                    <a href="http://www.flexboxdefense.com/" class="tutorial_link">Flexbox Defense</a>
+                </li>
             </ul>
         
             <h2 class="title">Flexbox Articles</h2>
