Change title. Minor fixes.

--- a/omnigon/app/html/index.html
+++ b/omnigon/app/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
-    <title>Title</title>
+    <title>Omnigon MarkUp</title>
 </head>
 <body>
 
@@ -91,6 +91,8 @@
     <!-- START content -->
     <main class="content-wrap">
         <div class="content">
+
+            <!-- START tabs -->
             <div class="tabs">
                 <ul class="tabs__list">
                     <li class="tabs__item">Detail</li>
@@ -102,7 +104,7 @@
                 <div class="tabs__filter">
                     <label class="checkbox" for="checkbox">
                         <span class="checkbox__text">Present in random order</span>
-                        <input type="checkbox" class="checkbox__custom" id="checkbox" />
+                        <input type="checkbox" class="checkbox__custom" id="checkbox"/>
                         <label for="checkbox"></label>
                     </label>
                 </div>
@@ -117,7 +119,7 @@
                             Embed at least 2 players*
                         </div>
                     </div>
-
+            
                     <div class="profiles-wrap">
                         <div class="profile">
                             <img class="profile__img" src="../img/derozan@1x.jpg"
@@ -266,6 +268,8 @@
                     </div>
                 </div>
             </div>
+            <!-- END tabs -->
+
         </div>
     </main>
     <!-- END content -->
