--- a/projectP/html/contact.html
+++ b/projectP/html/contact.html
@@ -15,7 +15,9 @@
 
     <!-- START header -->
     <header id="header" class="header">
-        <div class="header__logo"></div>
+        <a href="index.html" class="header__logo-link">
+            <img class="header__logo" src="../img/logo.png" alt="Logo">
+        </a>
         <nav class="header__nav">
             <div class="header__nav-inner">
                 <ul class="header__nav-list">
@@ -42,12 +44,11 @@
                 </ul>
             </div>
         </nav>
-        <img class="header__logo-section" src="../img/logo.jpg" alt="Logo">
     </header>
-    <div class="slider">
-        <img class="header__logo-section" src="../img/img_about-1100x200.jpg" alt="Slide-1">
-        <img class="header__logo-section" src="../img/img_contact-1100x200.jpg" alt="Slide-2">
-    </div>
+    <!--<div class="slider">-->
+        <!--<img class="header__logo-section" src="../img/img_about-1100x200.jpg" alt="Slide-1">-->
+        <!--<img class="header__logo-section" src="../img/img_contact-1100x200.jpg" alt="Slide-2">-->
+    <!--</div>-->
     <!-- END header -->
 
     <!-- START content -->
@@ -75,7 +76,7 @@
                 <h3 class="title">Find Us</h3>
                 <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2540.3028837458382!2d30.592132199999995!3d50.4540843!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cfe8cd8d2247%3A0xb17850d868daf500!2z0LLRg9C7LiDQnNC40LrRltC70YzRgdGM0LrQvi3QodC70L7QsdGW0LTRgdGM0LrQsCwgMtCRLCDQmtC40ZfQsiwg0LzRltGB0YLQviDQmtC40ZfQsg!5e0!3m2!1sru!2sua!4v1425147847450"
-                            width="520" height="325" frameborder="0" style="border:0"></iframe>
+                            width="400" height="325" frameborder="0" style="border:0"></iframe>
                 </div>
                 <div class="contact">
                     <address class="contact__address">Czech Republic, Praha 4,<br>
