--- a/projectP/html/index.html
+++ b/projectP/html/index.html
@@ -15,7 +15,9 @@
 
     <!-- START header -->
     <header id="header" class="header">
-        <div class="header__logo"></div>
+        <a href="index.html" class="header__logo-link">
+            <img class="header__logo" src="../img/logo.png" alt="Logo">
+        </a>
         <nav class="header__nav">
             <div class="header__nav-inner">
                 <ul class="header__nav-list">
@@ -42,13 +44,18 @@
                 </ul>
             </div>
         </nav>
-        <img class="header__logo-section" src="../img/logo.jpg" alt="Logo">
     </header>
-    <div class="slider">
-        <img class="header__logo-section" src="../img/img_about-1100x200.jpg" alt="Slide-1">
-        <img class="header__logo-section" src="../img/img_contact-1100x200.jpg" alt="Slide-2">
-    </div>
+    <!--<div class="slider">-->
+        <!--<img class="header__logo-section" src="../img/img_about-1100x200.jpg" alt="Slide-1">-->
+        <!--<img class="header__logo-section" src="../img/img_contact-1100x200.jpg" alt="Slide-2">-->
+    <!--</div>-->
     <!-- END header -->
+
+    <!-- START banner -->
+    <div class="banner">
+        <img class="banner__img" src="../img/home-banner.jpg" alt="Home banner">
+    </div>
+    <!-- END banner -->
 
     <!-- START content -->
     <main class="content">
