--- a/projectP/html/contact.html
+++ b/projectP/html/contact.html
@@ -69,6 +69,7 @@
                     <input class="form__input" type="text" name="name" id="name" placeholder="Name*" required>
                     <input class="form__input" type="email" name="email" id="email" placeholder="E-mail*" required>
                     <textarea class="form__input form__input--textarea" name="text" id="text" placeholder="Message*"></textarea>
+                    <p id="form-message" class="text"></p>
                     <button type="submit" class="btn btn--submit">Send</button>
                 </form>
             </div>
